--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 
       <div class="topnav">
       <div class="topnav-right">
-      <img src="images/Web Banner Signature Home Nonni.png" class="banner">
+      <div class="container">
+          <img src="images/Web Banner Signature Home Nonni.png" class="banner">
+          <div class="overlay">
+              <div class="text">Daniel Murphy ITC3400 90363</div>
+          </div>
+      </div>
       <a class="active" href="index.html">Home</a><i class="fa fa-angle-double-down"></i>
       <a href="menu.html">Menu</a><i class="fa fa-angle-double-down"></i>
       <a href="contact.html">Contact</a><i class="fa fa-angle-double-down"></i>
