--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
       <a href="menu.html">Menu</a><i class="fa fa-angle-double-down"></i>
       <a class="active" href="contact.html">Contact</a><i class="fa fa-angle-double-down"></i>
       <a href="hours.html">Restaurant Hours</a><i class="fa fa-angle-double-down"></i>
-      <a href="about.html">About Us</a><i class="fa fa-angle-double-down"></i>
+      <a href="thingsToDo.html">Things To Do</a><i class="fa fa-angle-double-down"></i>
       <span class='rightLink'><a href="index.html">Restaurant Home</a><i class="fa fa-angle-double-down"></i></span>
     </div>
   </div><h1 class="title">Contact Us</h1>
