--- a/index.html
+++ b/index.html
@@ -22,17 +22,20 @@
       <a href="menu.html">Menu</a><i class="fa fa-angle-double-down"></i>
       <a href="contact.html">Contact</a><i class="fa fa-angle-double-down"></i>
       <a href="hours.html">Restaurant Hours</a><i class="fa fa-angle-double-down"></i>
-      <a href="about.html">About Us</a><i class="fa fa-angle-double-down"></i>
+      <a href="thingsToDo.html">Things To Do</a><i class="fa fa-angle-double-down"></i>
       <span class='rightLink'><a href="index.html">Restaurant Home</a><i class="fa fa-angle-double-down"></i></span>
 
     </div>
-    <div id="mainContent"></div>
-  </div>
 
+  </div>
+  <h1 class="title">Welcome</h1>
+  <div>
+    <img class="mainImage" src="images/pizza.jpg">
+  </div>
 </body>
 </html>
 
-    <h1 class="title">Welcome</h1>
+   
     <footer> 
     
 
